<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.sfxd.trust</groupId>
  <artifactId>trust-bot</artifactId>
  <version>1.0.1-SNAPSHOT</version>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>25</maven.compiler.source>
    <maven.compiler.release>25</maven.compiler.release>

    <!--
      Make sure you upgrade the ebean-migration dependency as well.
      The version numbers don't match exactly.
    -->
    <ebean.version>17.4.0</ebean.version>
    <camel.version>4.10.2</camel.version>
    <inject.version>12.5</inject.version>
    <jsonb.version>3.7</jsonb.version>
  </properties>

  <repositories>
    <repository>
      <id>dv8tion</id>
      <name>m2-dv8tion</name>
      <url>https://m2.dv8tion.net/releases</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>1.5.25</version>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <version>2.2.220</version>
    </dependency>
    <dependency>
      <groupId>io.ebean</groupId>
      <artifactId>ebean-h2</artifactId>
      <version>${ebean.version}</version>
    </dependency>
    <dependency>
      <groupId>io.ebean</groupId>
      <artifactId>ebean-migration</artifactId>
      <version>13.6.0</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>net.dv8tion</groupId>
      <artifactId>JDA</artifactId>
      <version>4.3.0_313</version>
<!--      <exclusions>-->
<!--        <exclusion>-->
<!--          <groupId>club.minnced</groupId>-->
<!--          <artifactId>opus-java</artifactId>-->
<!--        </exclusion>-->
<!--        <exclusion>-->
<!--          <groupId>com.google.crypto.tink</groupId>-->
<!--          <artifactId>tink</artifactId>-->
<!--        </exclusion>-->
<!--      </exclusions>-->
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-inject</artifactId>
      <version>${inject.version}</version>
    </dependency>
    <dependency>
      <groupId>org.codehaus.janino</groupId>
      <artifactId>janino</artifactId>
      <version>3.1.2</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.camel</groupId>
      <artifactId>camel-core</artifactId>
      <version>${camel.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.camel</groupId>
      <artifactId>camel-http</artifactId>
      <version>${camel.version}</version>
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-jsonb</artifactId>
      <version>${jsonb.version}</version>
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-jsonb-generator</artifactId>
      <version>${jsonb.version}</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-inject-generator</artifactId>
      <version>${inject.version}</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>io.ebean</groupId>
      <artifactId>ebean-test</artifactId>
      <version>${ebean.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.6.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>3.3.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.avaje</groupId>
      <artifactId>avaje-inject-test</artifactId>
      <version>${inject.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArgs>
            <arg>-Xlint</arg>
            <arg>-proc:full</arg>
          </compilerArgs>
          <annotationProcessorPaths>
            <path>
              <groupId>io.ebean</groupId>
              <artifactId>querybean-generator</artifactId>
              <version>${ebean.version}</version>
            </path>
            <path>
              <groupId>io.avaje</groupId>
              <artifactId>avaje-inject-generator</artifactId>
              <version>${inject.version}</version>
            </path>
            <path>
              <groupId>io.avaje</groupId>
              <artifactId>avaje-jsonb-generator</artifactId>
              <version>${jsonb.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.7.1</version>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
          <archive>
            <manifest>
              <mainClass>${exec.mainClass}</mainClass>
            </manifest>
          </archive>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
      </plugin>
      <plugin>
        <groupId>io.ebean</groupId>
        <artifactId>ebean-maven-plugin</artifactId>
        <version>${ebean.version}</version>
        <extensions>true</extensions>
      </plugin>
      <plugin>
        <groupId>io.avaje</groupId>
        <artifactId>avaje-inject-maven-plugin</artifactId>
        <version>${inject.version}</version>
        <executions>
          <execution>
            <?m2e execute?>
            <phase>process-sources</phase>
            <goals>
              <goal>provides</goal>
            </goals>
          </execution>
        </executions>
        <extensions>true</extensions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>default</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <exec.mainClass>com.github.sfxd.trust.Main</exec.mainClass>
      </properties>
    </profile>
    <profile>
      <!-- To Migrate you need to comment out -Werror from the compiler flags. -->
      <id>migrate</id>
      <properties>
        <exec.mainClass>com.github.sfxd.trust.core.migration.GenerateDbMigration</exec.mainClass>
      </properties>
    </profile>
  </profiles>
</project>
